Submissions/Q5/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Complete stack to be deployed

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: balamurugan-VPC
        - Key: CreatedBy
          Value: Bala Murugan

  MyPublicSubnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref MyVPC
        CidrBlock: 10.0.1.0/24
        AvailabilityZone: us-east-1a
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: balamurugan-PublicSubnet
          - Key: CreatedBy
            Value: Bala Murugan

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group to allow HTTP and SSH
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: balamurugan-WEBSG
        - Key: CreatedBy
          Value: Bala Murugan

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-05ffe3c48a9991133
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref MySecurityGroup
      SubnetId: !Ref MyPublicSubnet
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Hello from Bala Murugan!</h1>" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: balamurugan-EC2
        - Key: CreatedBy
          Value: Bala Murugan
  
  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: balamurugan-IGW
        - Key: CreatedBy
          Value: Bala Murugan

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway
      Tags:
        - Key: CreatedBy
          Value: Bala Murugan

  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: balamurugan-RouteTable
        - Key: CreatedBy
          Value: Bala Murugan

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway
      Tags:
        - Key: CreatedBy
          Value: Bala Murugan

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MyPublicSubnet
      RouteTableId: !Ref MyRouteTable
      Tags:
        - Key: CreatedBy
          Value: Bala Murugan
